# ai_platform

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml  validate.yml
docs/: architecture.md  engineering-principles.md  philosophy.md
scripts/: ci_bump_version.py  create_package.py
