[project]
name = "ai-platform"
version = "0.1.0"
description = "AI Platform Workspace"
requires-python = ">=3.12"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff",
    "mypy",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require external services",
]
addopts = "-ra"